--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     Hola soy <strong>John Faber Florez</strong> <br> desarrollador   
                     <strong>FrontEnd</strong> con <br> enfásis en <strong>JavaScript</strong>
                 </h1>
-                <img  class="hero-image" src="images/hero.png" alt="Imagen principal del sitio"> 
+                <img  class="hero-image" src="https://eafitrequisitos.s3.us-east-2.amazonaws.com/john.png" alt="Imagen principal del sitio"> 
             </div>
         </section>
         <section id="portafolio" class="portfolio">
